--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,7 @@
 {
     "cSpell.words": [
-        "acercademi",
-        "Experiencia",
-        "laboral",
-        "quispe",
+        "educacion",
+        "experiencia",
         "sobremi"
     ]
 }
